@startuml

class OvernachtingController {
    - OvernachtingFacade overnachtingFacade
    + List<Overnachting> zoekOvernachtingen(OvernachtingFilter overnachtingFilter)
    + Overnachting slaOvernachtingOp(Overnachting overnachting)
    + Overnachting haalOvernachtingOp(id?)
}

class OvernachtingFacade {
    - OvernachtingRepository overnachtingRepository
    - OvernachtingAdapter overnachtingAdapter
    + List<Overnachting> zoekOvernachtingen(OvernachtingFilter overnachtingFilter)
    + Overnachting slaOvernachtingOp(Overnachting overnachting)
    + Overnachting haalOvernachtingOp(id?)
}

class OvernachtingService {
    - OvernachtingFacade overnachtingFacade
    + List<Overnachting> zoekOvernachtingen(OvernachtingFilter overnachtingFilter)
    + Overnachting slaOvernachtingOp(Overnachting overnachting)
    + Overnachting haalOvernachtingOp(id?)
}

class OvernachtingRepository {
    + Overnachting slaOvernachtingOp(Overnachting overnachting)
    + Overnachting haalOvernachtingOp(id?)
}

class OvernachtingAdapter {
    + List<Overnachting> zoekOvernachtingen(OvernachtingFilter overnachtingFilter)
    + String fallbackForAPI()
}

class Overnachting {
}

class OvernachtingFilter {
    private LocalDate arrival_date;
    private LocalDate departure_date;
    private int room_qty;
    private int guest_qty;
    private String bbox;
}

interface Fallback {
    + String fallbackForAPI()
}

OvernachtingController --> OvernachtingFacade
OvernachtingService --> OvernachtingFacade
OvernachtingFacade --> OvernachtingRepository
OvernachtingFacade --> OvernachtingAdapter
OvernachtingRepository --> Overnachting
OvernachtingAdapter --> OvernachtingFilter
Fallback <|.. OvernachtingAdapter

@enduml
